--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
- hello 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Patricia</title>
+  </head>
+  <body>
+    <h1>anythingBee</h1>
+    <h2>Katherine Zhao</h2>
+    <h3>Joseph Othman</h3>
+    <h3>Calvin Liu</h3>
+  </body>
+</html>
+
