--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <title>Patricia</title>
+    ;Changes the title of the site seen on the tab.
   </head>
   <body>
     <h1>anythingBee</h1>
     <h2>Katherine Zhao</h2>
     <h3>Joseph Othman</h3>
     <h3>Calvin Liu</h3>
+    ;Heading tags go down in size, all the way from h1
   </body>
 </html>
 
