--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+;Katherine Zhao
+;IntroCS pd05 sec08
+;HW02 -- Publishio!/HTML/Basics- Heading tags, title tags...
+;2021-02-04
 <!DOCTYPE html>
 <html>
   <head>
