--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-;Katherine Zhao
-;IntroCS pd05 sec08
-;HW02 -- Publishio!/HTML/Basics- Heading tags, title tags...
-;2021-02-04
+<!-- Katherine Zhao -->
+<!-- IntroCS pd05 sec08 -->
+<!-- HW02 -- Publishio!/HTML/Basics- Heading tags, title tags... -->
+<!-- 2021-02-04 -->
 <!DOCTYPE html>
 <html>
   <head>
     <title>Patricia</title>
-    ;Changes the title of the site seen on the tab.
+    <!-- Changes the title of the site seen on the tab -->
   </head>
   <body>
     <h1>anythingBee</h1>
     <h2>Katherine Zhao</h2>
     <h3>Joseph Othman</h3>
     <h3>Calvin Liu</h3>
-    ;Heading tags go down in size, all the way from h1
+    <!-- Heading tags go down in size, all the way from h1 -->
   </body>
 </html>
 
